--- a/web/index.html
+++ b/web/index.html
@@ -6,18 +6,14 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Lab 2 Calculators</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <h2>Calculate the area of a rectangle</h2>
-        <form id='form1' name='form1' method='POST' action='calculator'>
-            Enter Length:
-            <input id="length" name="length" type='text' value=""/>
-            Enter Width:
-            <input id="width" name="width" type='text' value=""/>
-            <input type="submit" name="submit" value="Calculate"/>
-        </form>
+        <h2>Calculators</h2>
+        <a href="lab1/calculate.html">Calculate area Lab1</a>
+        <a href="lab2/calculator.jsp">Calculate area Lab2</a>
+        <a href="lab3/calculators.jsp">Calculate area Lab3</a>
     </body>
 </html>
