--- a/web/lab1/calculate.html
+++ b/web/lab1/calculate.html
@@ -6,13 +6,13 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Lab 1 Area Calculator</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <h2>Calculate the area of a rectangle</h2>
-        <form id='form1' name='form1' method='POST' action='calculator'>
+        <form id='form1' name='form1' method='POST' action='../calculator'>
             Enter Length:
             <input id="length" name="length" type='text' value=""/>
             Enter Width:
