Added JSTL and EL

--- a/web/index.html
+++ b/web/index.html
@@ -6,12 +6,13 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>Lab 2 Calculators</title>
+        <title>Area Calculators</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="calculator.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <h2>Calculators</h2>
+        <h2>Area Calculators</h2>
         <ul>
             <li>
                 <a href="lab1/calculate.html">Calculate area Lab1</a>
@@ -21,6 +22,9 @@ and open the template in the editor.
             </li>
             <li>
                 <a href="lab3/calculators.jsp">Calculate area Lab3</a>
+            </li>
+            <li>
+                <a href="lab4/calculators.jsp">Calculate area Lab4</a>
             </li>
         </ul>
     </body>
