--- a/web/index.html
+++ b/web/index.html
@@ -9,7 +9,7 @@ and open the template in the editor.
         <title>Area Calculators</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="calculator.css" rel="stylesheet" type="text/css"/>
+        <link href="css/calculator.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <h2>Area Calculators</h2>
