Added JSTL and EL

--- a/web/index.html
+++ b/web/index.html
@@ -15,17 +15,16 @@ and open the template in the editor.
         <h2>Area Calculators</h2>
         <ul>
             <li>
-                <a href="lab1/calculate.html">Calculate area Lab1</a>
+                <a href="lab1/calculate.html">Calculate area Lab1</a> &nbsp Results sent to a separate page.
             </li>
             <li>
-                <a href="lab2/calculator.jsp">Calculate area Lab2</a>
+                <a href="lab2/calculator.jsp">Calculate area Lab2</a> &nbsp Results sent to the original page.
             </li>
             <li>
-                <a href="lab3/calculators.jsp">Calculate area Lab3</a>
+                <a href="lab3/calculators.jsp">Calculate area Lab3</a> &nbsp Added images and css.
             </li>
             <li>
-                <a href="lab4/calculators.jsp">Calculate area Lab4</a>
-            </li>
+                <a href="lab4/calculators.jsp">Calculate area Lab4</a> &nbsp Added JSTL and EL.
         </ul>
     </body>
 </html>
